--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "start": "node .output/server/index.mjs",
+    "dev": "nuxt dev"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
