--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Build
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.17.0
+        run: |
+          nvm use 18.17.0
+          npm install -g yarn
+          yarn
+          yarn build
+
       - name: Copy Files to Server
         uses: appleboy/scp-action@master
         with:
