--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,7 @@ jobs:
           script: |
             cd /var/www/blog.necodeo.com/admin/
             source ~/.nvm/nvm.sh
+            nvm install 18.17.0
             nvm use 18.17.0
             lsof -i:3000 -t | xargs -r kill
             API_URL=http://admin-api.necodeo.com/api/v1 PORT=3000 node .output/server/index.mjs
